--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": {},
+  "dependencies": {
+    "d3": "5.7.0"
+  },
   "devDependencies": {
     "parcel-bundler": "^1.6.1"
   },
