--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3": "5.7.0"
   },
   "devDependencies": {
+    "@types/d3": "5.0.1",
     "parcel-bundler": "^1.6.1"
   },
   "keywords": []
